# nbots

./: #README.md#  #README_DEVELOPERS.md#  .#README.md  .#README_DEVELOPERS.md  .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CONTRIBUTIONS.md  CUnitAutomated-Listing.xml  CUnitAutomated-Results.xml  CodingStyle  FAQ.md  FAQ.txt  LICENSE  LICENSE.md  README.md  README_DEVELOPERS.md  README_DEVELOPERS.md.bak  build.gradle  gradlew  gradlew.bat  nbots_standard.txt  peak --voicesqq  run_unit_tests.sh  settings.gradle
binding_java/JNI/: CMakeLists.txt
binding_java/JNI/geometric_bot/: geometric_bot.c  jModel.c  jModel.h
binding_java/JNI/include/geometric_bot/: JNI_jModel.h
binding_java/JNI/pde_bot/: pde_bot.h
binding_java/JNI/src/geometric_bot/: JNI_jGeometricBot.c  JNI_jModel.c  jModel.c  jModelStatus.c
binding_java/JNI/src/pde_bot/: JNI_jPdeBot.c
binding_java/java/: CMakeLists.txt
binding_java/java/nb/geometricBot/: GeometricBot.java  Model.java  ModelStatus.java
binding_java/java/nb/pdeBot/: BoundaryConditions.java
binding_java/tests/: CMakeLists.txt  TestGeometricBot.java  TestModel.java  TestPdeBot.java
ci_tools/test_launchers/: CMakeLists.txt  run_tests.c  test.c  test_driver.h  unit_test_driver.c
src/: .#CMakeLists.txt  CMakeLists.txt  replace_omp.h
src/C/: CMakeLists.txt
src/C/nb/: cfreader_cat.c  exceptions.c  math_bot.c  statistics_bot.c  visual_cat-cairo.c  visual_cat.c
src/C/nb/container_bot/: CMakeLists.txt  container.c  container_struct.h  iterator.c  iterator_struct.h
src/C/nb/eigen_bot/: sparse.c
src/C/nb/geometric_bot/: CMakeLists.txt  point2D.c  utils2D.c
src/C/nb/graph_bot/: graph.c
src/C/nb/image_bot/: CMakeLists.txt  image.c
src/C/nb/pde_bot/: CMakeLists.txt  CMakeLists.txt.orig  boundary_conditions.c
src/C/vcn/: cfreader_cat.c  math_bot.c  sparse_spyplot_TEMPORAL_FILE.c  statistics_bot.c  visual_cat-cairo.c  visual_cat.c
src/C/vcn/eigen_bot/: CMakeLists.txt  sparse.c
src/C/vcn/geometric_bot/: CMakeLists.txt
src/C/vcn/graph_bot/: CMakeLists.txt  graph.c
src/C/vcn/pde_bot/: CMakeLists.txt  boundary_conditions.c
src/JNI/: CMakeLists.txt
src/JNI/geometric_bot/: geometric_bot.c  jModel.c  jModel.h  load_jMesh.c  load_jMesh.h
src/JNI/pde_bot/: pde_bot.c  pde_bot.h
src/java/: CMakeLists.txt  Makefile  Samples.java  java_exec.sh
src/java/nb/geometricBot/: GeometricBot.java  GeometricBotDraw.java  Mesh.java  Model.java
src/java/nb/pdeBot/: BCType.java  BoundaryConditions.java  Material.java
src/java/vcn/geometricBot/: Box.java  GeometricBot.java  GeometricBotDraw.java  Mesh.java  Model.java
src/java/vcn/pdeBot/: BCType.java  BoundaryConditions.java  Material.java
src/jni/: CMakeLists.txt  Makefile  jni_geometric_bot.c  jni_geometric_bot.h
src/jni/geometric_bot/: geometric_bot.c  geometric_bot.h  load_jMesh.c  load_jMesh.h
src/jni/pde_bot/: pde_bot.c  pde_bot.h
src/nb/: cfreader_cat.c  exceptions.c  math_bot.c  statistics_bot.c
src/nb/container_bot/: CMakeLists.txt  array.c  container.c  iterator.c
src/nb/container_bot/hash/: binding.c  hash_dst.c  hash_iterator.c
src/nb/container_bot/heap/: binding.h  heap_dst.c  heap_iterator.c  heap_struct.h  heap_tree.c  heap_tree.h
src/nb/container_bot/queue/: nb_queue_binding.c  nb_queue_binding.h  nb_queue_dst.c  nb_queue_dst.h  nb_queue_iterator.c  nb_queue_iterator.h  nb_queue_node.c  nb_queue_node.h  nb_queue_struct.h  queue_node.h
src/nb/container_bot/sorted/: avl_dst.c  avl_iterator.c  avl_struct.h  avl_tree.c  avl_tree.h
src/nb/container_bot/stack/: stack_dst.c  stack_iterator.c  stack_node.c  stack_node.h  stack_struct.h
src/nb/eigen_bot/: CMakeLists.txt  get_graph.c  sparse.c
src/nb/geometric_bot/: point2D.c  utils2D.c
src/nb/graph_bot/: extend_adj.c  force_symmetry.c  get_subgraph.c  graph.c  spectral_bissection.c
src/nb/graphics_bot/: drawing_tools-cairo.c  drawing_tools.c  drawing_tools.c.cairo  drawing_utils.c  palette_struct.h
src/nb/image_bot/: image.c
src/nb/interpolation_bot/: TMP_nonpolynomial.c  nonpolynomial.c
src/nb/math_bot/: gauss_legendre_quad.c  utils.c
src/nb/memory_bot/: allocate_mem.c  membank.c  nb_malloc.c
src/nb/pde_bot/: frechet_derivative.c  gauss_legendre_quad.c  material.c  ode_solvers.c  smooth_spline.c  solid_mechanics_formulas.c
src/nb/solver_bot/: get_graph.c  matlab_v4.c  matrix.c  sparse.c  sparse_struct.h  vector.c
src/vcn/: CMakeLists.txt  cfreader_cat.c  exceptions.c  fem_bot.c  visual_cat.c
src/vcn/container_bot/: CMakeLists.txt  array.c  container.c  iterator.c
src/vcn/geometric_bot/: CMakeLists.txt  point2D.c  utils2D.c
src/vcn/image_bot/: CMakeLists.txt  image.c
src/vcn/pde_bot/: CMakeLists.txt  boundary_conditions.c  material.c
tests/: CMakeLists.txt  complexity_funcs.c  complexity_funcs.h  complexity_test_driver.c  performance_test_driver.c  run_tests.c  test.h  test_add.c  test_add.h  test_driver.h  test_driver_types.h  test_library.h  unit_test_driver.c
tests/java/: CMakeLists.txt  TestGeometricBot.java  TestPdeBot.java
tests/nb/container_bot/: CMakeLists.txt  array_CT.c  array_PT.c  array_UT.c  container_HASH_CT.c  container_HASH_UT.c  container_HEAP_CT.c  container_HEAP_UT.c  container_QUEUE_CT.c  container_QUEUE_UT.c  container_SORTED_CT.c  container_SORTED_UT.c  container_STACK_CT.c  container_STACK_UT.c  container_TEMPLATE_CT.c  container_TEMPLATE_UT.c  iterator_HASH_UT.c  iterator_HEAP_UT.c  iterator_QUEUE_UT.c  iterator_SORTED_UT.c  iterator_STACK_UT.c  iterator_TEMPLATE_UT.c
tests/nb/geometric_bot/: CMakeLists.txt  point2D_UT.c  utils2D_UT.c
tests/nb/pde_bot/: CMakeLists.txt
tests/valgrind_template/: valgrind_test.c
tests/vcn/: CMakeLists.txt
tests/vcn/container_bot/: CMakeLists.txt  array_CT.c  array_PT.c  array_UT.c  container_HASH_CT.c  container_HEAP_CT.c  container_QUEUE_UT.c  container_SORTED_CT.c  container_SORTED_UT.c  container_STACK_CT.c  container_TEMPLATE_CT.c  container_TEMPLATE_UT.c  iterator_HASH_UT.c  iterator_TEMPLATE_UT.c
tests/vcn/geometric_bot/: CMakeLists.txt  utils2D_UT.c
tests/vcn/pde_bot/: CMakeLists.txt
(+1356 files in other folders)
